syntax = "proto3";

package Need4Protocol;

message ActionResponse {
	int32 result = 1;
}
