syntax = "proto3";

package Need4Protocol;
import "protos/ActionResponse.proto";
import "google/protobuf/empty.proto";

service ItemRepository {
	rpc AddNewItem (Item) returns (ActionResponse);
	rpc GetAllItems (google.protobuf.Empty) returns (ItemList);
	rpc GetMatchingItems (Item) returns (ItemList);
}

message ItemList {
	repeated Item list = 1;
}

message Item {
	string name = 1;
}

